feat: データセットとモデルの最適化
- dataset_image.py:
  - 画像読み込みとbbox切り出しのドキュメントを最適化
  - 画像読み込み時にIMREAD_COLORを使用して高速化
  - リサイズ時にINTER_AREAを使用して最適化

- model_resnet_base.py:
  - 特徴抽出メソッド名を変更し、純粋な抽出処理であることを明示
  - prefetch_factorを2から4に増加し、データローディングを最適化

- model_resnet_knn.py:
  - 特徴抽出処理をキャッシュからの読み込みからモデル内での保存に変更
  - モデル保存時にメタ情報をJSON形式で保存
  - モデル読み込み時にメタ情報を読み込み、特徴量をファイルから取得

--- a/notebooks/exp_knn_cloud.ipynb
+++ b/notebooks/exp_knn_cloud.ipynb
@@ -15,18 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install nbstripout\n",
-    "%cd atma_22_ca\n",
-    "!nbstripout --install"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# GPU確認\n",
     "!nvidia-smi\n",
     "\n",
@@ -40,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "source": [
     "## 4. Git pull"
@@ -49,7 +37,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install nbstripout\n",
+    "%cd atma_22_ca\n",
+    "!nbstripout --install"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global user.email \"runpod@example.com\"\n",
+    "!git config --global user.name \"Runpod User\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "## 2. パッケージインストール"
@@ -101,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## 6. モジュールインポート"
@@ -120,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "## 7. ロガー設定"
@@ -156,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 8. データ読み込み"
@@ -182,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## 9. パラメータ設定（GPU最適化）\n",
@@ -240,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,20 +271,25 @@
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(f\"Device: {device}\")\n",
     "\n",
-    "# GPU最適化パラメータ\n",
+    "# GPU最適化パラメータ（DataLoaderボトルネック対策）\n",
     "if device == 'cuda':\n",
     "    # GPU仕様を確認\n",
     "    gpu_name = torch.cuda.get_device_name(0)\n",
     "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1024**3  # GB\n",
     "    print(f\"GPU: {gpu_name}, Memory: {gpu_memory:.1f}GB\")\n",
     "    \n",
+    "    # CPU並列化を強化（DataLoaderボトルネック対策）\n",
+    "    import os\n",
+    "    cpu_count = os.cpu_count() or 8\n",
+    "    print(f\"利用可能CPU: {cpu_count} cores\")\n",
+    "    \n",
     "    # A40/A100など大容量GPUの場合\n",
     "    if gpu_memory > 20:\n",
     "        batch_size = 256  # 大幅増加（64 → 256）\n",
-    "        num_workers = 8   # ワーカー数増加（4 → 8）\n",
+    "        num_workers = min(16, cpu_count)  # CPU並列化を最大化\n",
     "    else:\n",
     "        batch_size = 128\n",
-    "        num_workers = 6\n",
+    "        num_workers = min(12, cpu_count)\n",
     "else:\n",
     "    batch_size = 32\n",
     "    num_workers = 2\n",
@@ -306,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "## 11. Runner作成"
@@ -315,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "## 12. 5-Fold CV学習（GPU高速化）"
@@ -345,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +374,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "source": [
     "# 5-fold 評価"
@@ -368,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,14 +402,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "source": [
     "## 13. テストデータ予測"
@@ -394,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "source": [
     "## 14. 提出ファイル作成"
@@ -438,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "source": [
     "## 15. kチューニング実験（高速）"
@@ -461,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,28 +555,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -670,6 +678,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": []
