feat: 1th_submit

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -53,22 +53,27 @@
    "outputs": [],
    "source": [
     "# メタデータ読み込み\n",
-    "df_train = pd.read_csv(os.path.join(DIR_INPUT, 'atmaCup22_metadata', 'train_meta.csv'))\n",
-    "df_test = pd.read_csv(os.path.join(DIR_INPUT, 'atmaCup22_metadata', 'test_meta.csv'))\n",
+    "df_train = pd.read_csv(FILE_TRAIN_META)\n",
+    "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
     "print(\"=\"*80)\n",
     "print(\"📊 Dataset Loaded\")\n",
     "print(\"=\"*80)\n",
-    "print(f\"\\nTrain shape: {df_train.shape}\")\n",
-    "print(f\"Test shape:  {df_test.shape}\")\n",
+    "print(f\"Train: {len(df_train):,} samples\")\n",
+    "print(f\"Test:  {len(df_test):,} samples\")\n",
     "\n",
-    "# CV戦略用のgroup列作成\n",
+    "# グループ列作成（quarter_session）\n",
     "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
     "df_test['group'] = df_test['quarter'] + '_' + df_test['session'].astype(str)\n",
     "\n",
-    "print(f\"\\n【Columns】\")\n",
-    "print(f\"Train: {list(df_train.columns)}\")\n",
-    "print(f\"Test:  {list(df_test.columns)}\")"
+    "print(\"\\n=\"*80)\n",
+    "print(\"📋 Data Preview\")\n",
+    "print(\"=\"*80)\n",
+    "print(\"\\n【Train】\")\n",
+    "display(df_train.head(10))\n",
+    "\n",
+    "print(\"\\n【Test】\")\n",
+    "display(df_test.head(10))"
    ]
   },
   {
