--- a/notebooks/exp_knn.ipynb
+++ b/notebooks/exp_knn.ipynb
@@ -109,19 +109,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ラベル分布確認\n",
-    "label_counts = df_train['label_id'].value_counts().sort_index()\n",
-    "print(\"\\n=== Label Distribution ===\")\n",
-    "print(label_counts)\n",
+    "# メタデータ読み込み\n",
+    "df_train = pd.read_csv(FILE_TRAIN_META)\n",
+    "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "label_counts.plot(kind='bar')\n",
-    "plt.title('Training Data Label Distribution')\n",
-    "plt.xlabel('Label ID')\n",
-    "plt.ylabel('Count')\n",
-    "plt.grid(axis='y', alpha=0.3)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "print(f\"Train: {df_train.shape}\")\n",
+    "print(f\"Test: {df_test.shape}\")\n",
+    "\n",
+    "# グループ列作成（quarter_session）\n",
+    "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
+    "print(f\"Groups: {df_train['group'].nunique()}\")"
    ]
   },
   {
