--- a/notebooks/exp_knn_cloud.ipynb
+++ b/notebooks/exp_knn_cloud.ipynb
@@ -148,7 +148,7 @@
     "from configs.config import *\n",
     "from src.runner import Runner\n",
     "from src.model_resnet_knn import ModelResNet50KNN\n",
-    "from src.util import Logger, Util, Metric\n",
+    "from src.util import Logger, Submission\n",
     "\n",
     "print(f\"Input dir: {DIR_INPUT}\")\n",
     "print(f\"Model dir: {DIR_MODEL}\")\n",
@@ -196,8 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(os.path.join(DIR_INPUT, 'atmaCup22_metadata', 'train_meta.csv'))\n",
-    "df_test = pd.read_csv(os.path.join(DIR_INPUT, 'atmaCup22_metadata', 'test_meta.csv'))\n",
+    "df_train = pd.read_csv(FILE_TRAIN_META)\n",
+    "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
     "# グループ化\n",
     "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
@@ -366,9 +366,6 @@
    "source": [
     "%%time\n",
     "# 5-fold CV学習\n",
-    "# ⚠️ 初回実行時は特徴抽出に時間がかかります（CPU: 1-2時間, GPU: 20-30分）\n",
-    "# 2回目以降はキャッシュを使用するため高速です（数分）\n",
-    "\n",
     "runner.train_cv()"
    ]
   },
@@ -423,11 +420,7 @@
    "source": [
     "%%time\n",
     "# CV全モデルのアンサンブル予測\n",
-    "pred_test = runner.predict_cv()\n",
-    "\n",
-    "print(f\"\\nTest predictions shape: {pred_test.shape}\")\n",
-    "print(f\"\\nPrediction distribution:\")\n",
-    "print(pred_test['label_id'].value_counts().sort_index())"
+    "pred_test = runner.predict_cv()"
    ]
   },
   {
@@ -465,17 +458,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 提出ファイル保存\n",
-    "submission_path = runner.save_submission(pred_test, run_name)\n",
-    "\n",
-    "print(f\"\\n✅ Submission file saved: {submission_path}\")\n",
-    "print(f\"\\nFirst 10 predictions:\")\n",
-    "print(pred_test.head(10))"
+    "Submission.save(pred_test, run_name=run_name, logger=logger)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33",
    "metadata": {},
    "source": [
     "## 15. kチューニング実験（高速）"
@@ -484,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,20 +550,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
     " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -693,6 +681,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": []
