--- a/notebooks/validate_cv_leak.ipynb
+++ b/notebooks/validate_cv_leak.ipynb
@@ -62,21 +62,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GroupKFold validator の作成\n",
-    "validator = Validation.create_validator(method='group', n_splits=5)\n",
+    "df_train = pd.read_csv(FILE_TRAIN_META)\n",
+    "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
-    "# リークチェック実行\n",
-    "result = Validation.check_group_leak(\n",
-    "    validator=validator,\n",
-    "    X=df_train,\n",
-    "    y=df_train['label_id'].values,\n",
-    "    groups=df_train['group'].values,\n",
-    "    verbose=True\n",
-    ")\n",
+    "print(f\"Train: {len(df_train):,} samples\")\n",
+    "print(f\"Test:  {len(df_test):,} samples\")\n",
     "\n",
-    "print(f\"\\n{'='*80}\")\n",
-    "print(f\"Has Leak: {result['has_leak']}\")\n",
-    "print(f\"{'='*80}\")"
+    "# グループ列の作成（quarter_session）\n",
+    "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
+    "\n",
+    "print(f\"\\nUnique groups: {df_train['group'].nunique()}\")\n",
+    "print(f\"Unique players: {df_train['label_id'].nunique()}\")"
    ]
   },
   {
