--- a/notebooks/exp_knn_local.ipynb
+++ b/notebooks/exp_knn_local.ipynb
@@ -132,14 +132,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# メモ\n",
-    "memo = \"ResNet50 + KNN method (Local)\"\n",
+    "# メタデータ読み込み\n",
+    "df_train = pd.read_csv(FILE_TRAIN_META)\n",
+    "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
-    "# run_name\n",
-    "run_name = get_run_name(model_type=\"resnet50_knn_local\")\n",
-    "run_name = \"resnet50_knn_local_202512141406\"\n",
+    "print(f\"Train: {df_train.shape}\")\n",
+    "print(f\"Test: {df_test.shape}\")\n",
     "\n",
-    "print(f\"Run name: {run_name}\")"
+    "# グループ列作成（quarter_session）\n",
+    "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
+    "print(f\"Groups: {df_train['group'].nunique()}\")"
    ]
   },
   {
