feat: 学習データの前処理スクリプトを追加
- src/preprocess.pyを新規作成し、バウンディングボックスに基づく画像のクロッピング処理を実装
- 画像パス生成、クロッピング、JPEG保存を行う関数を定義
- 並列処理を用いて複数の画像を効率的に処理
- パディング比率を指定可能にし、エラーハンドリングを追加
- 処理結果のサマリーを表示する機能を実装

--- a/notebooks/exp_arcface_cloud.ipynb
+++ b/notebooks/exp_arcface_cloud.ipynb
@@ -165,7 +165,8 @@
    "outputs": [],
    "source": [
     "memo = \"EfficientNet-B0 + ArcFace\"\n",
-    "run_name = get_run_name(\"arcface_efficientnet_b0\")\n",
+    "# run_name = get_run_name(\"arcface_efficientnet_b0\")\n",
+    "run_name = 'arcface_efficientnet_b0_202512181355'\n",
     "print(f\"Run name: {run_name}\")\n",
     "print(f\"Memo: {memo}\")"
    ]
@@ -196,11 +197,11 @@
     "    if gpu_memory > 20:\n",
     "        batch_size = 128  # ArcFaceは少し控えめ（KNNより学習コスト高）\n",
     "        num_workers = min(12, cpu_count)\n",
-    "        epochs = 20\n",
+    "        epochs = 10\n",
     "    else:\n",
     "        batch_size = 64\n",
     "        num_workers = min(8, cpu_count)\n",
-    "        epochs = 20\n",
+    "        epochs = 10\n",
     "else:\n",
     "    batch_size = 32\n",
     "    num_workers = 2\n",
@@ -217,6 +218,7 @@
    "outputs": [],
    "source": [
     "# ArcFaceモデルパラメータ\n",
+    "# ※ 前処理済み画像は自動検出して使用されます（data/raw/input/train_crops/が存在する場合）\n",
     "params = {\n",
     "    # モデル設定\n",
     "    'model_name': 'efficientnet_b0',  # バックボーン: 'efficientnet_b0', 'resnet50', etc.\n",
@@ -248,7 +250,7 @@
     "cv_setting = {\n",
     "    'method': 'group',\n",
     "    'group_col': 'group',\n",
-    "    'n_splits': 5,\n",
+    "    'n_splits': 3,  # 3-fold（実行時間短縮のため）\n",
     "}\n",
     "\n",
     "print(\"\\n=== Parameters ===\")\n",
@@ -291,7 +293,7 @@
    "id": "17",
    "metadata": {},
    "source": [
-    "## 8. 5-Fold CV学習（ArcFace訓練）\n",
+    "## 8. 3-Fold CV学習（ArcFace訓練）\n",
     "\n",
     "各Foldで以下を実行：\n",
     "1. ArcFace損失で埋め込み学習（約20エポック）\n",
@@ -308,7 +310,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# 5-fold CV学習\n",
+    "# 3-fold CV学習\n",
     "runner.train_cv()"
    ]
   },
@@ -325,7 +327,7 @@
    "id": "20",
    "metadata": {},
    "source": [
-    "## 9. 5-Fold評価"
+    "## 9. 3-Fold評価"
    ]
   },
   {
@@ -979,11 +981,49 @@
     "print(\"\\n※ 閾値が低い → unknown予測が増える\")\n",
     "print(\"※ 閾値が高い → unknown予測が減る\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
