--- a/notebooks/exp_knn_cloud.ipynb
+++ b/notebooks/exp_knn_cloud.ipynb
@@ -266,36 +266,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# デバイス確認\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(f\"Device: {device}\")\n",
-    "\n",
-    "# GPU最適化パラメータ（DataLoaderボトルネック対策）\n",
-    "if device == 'cuda':\n",
-    "    # GPU仕様を確認\n",
-    "    gpu_name = torch.cuda.get_device_name(0)\n",
-    "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1024**3  # GB\n",
-    "    print(f\"GPU: {gpu_name}, Memory: {gpu_memory:.1f}GB\")\n",
-    "    \n",
-    "    # CPU並列化を強化（DataLoaderボトルネック対策）\n",
-    "    import os\n",
-    "    cpu_count = os.cpu_count() or 8\n",
-    "    print(f\"利用可能CPU: {cpu_count} cores\")\n",
-    "    \n",
-    "    # A40/A100など大容量GPUの場合\n",
-    "    if gpu_memory > 20:\n",
-    "        batch_size = 256  # 大幅増加（64 → 256）\n",
-    "        num_workers = min(16, cpu_count)  # CPU並列化を最大化\n",
-    "    else:\n",
-    "        batch_size = 128\n",
-    "        num_workers = min(12, cpu_count)\n",
-    "else:\n",
-    "    batch_size = 32\n",
-    "    num_workers = 2\n",
-    "\n",
-    "print(f\"最適化パラメータ: batch_size={batch_size}, num_workers={num_workers}\")\n",
-    "\n",
     "# モデルパラメータ設定\n",
+    "# ※ 前処理済み画像は自動検出して使用されます（data/raw/input/train_crops/が存在する場合）\n",
     "params = {\n",
     "    'model_name': 'resnet50',\n",
     "    # KNN固有パラメータ\n",
