--- a/notebooks/exp_arcface_cloud.ipynb
+++ b/notebooks/exp_arcface_cloud.ipynb
@@ -13,7 +13,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "## 1. 環境確認"
+    "### 1. 環境確認"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "## 2. パッケージインストール"
+    "### 2. パッケージインストール"
    ]
   },
   {
@@ -58,13 +58,61 @@
    "id": "5",
    "metadata": {},
    "source": [
-    "## 3. モジュールインポート"
+    "### 3. git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install nbstripout\n",
+    "!nbstripout --install"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global user.email \"runpod@example.com\"\n",
+    "!git config --global user.name \"Runpod User\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git pull origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "## 3. モジュールインポート"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "12",
    "metadata": {},
    "source": [
     "## 4. ロガー設定"
@@ -100,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 5. データ読み込み"
@@ -126,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,11 +194,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "16",
    "metadata": {},
    "source": [
-    "## 6. パラメータ設定（ArcFace + GPU最適化）\n",
-    "\n",
+    "## 6. パラメータ設定\n",
     "### GPU最適化戦略\n",
     "- batch_size: GPU VRAMに応じて動的調整\n",
     "- num_workers: CPU並列化でデータローディング高速化\n",
@@ -160,13 +207,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
     "memo = \"EfficientNet-B0 + ArcFace\"\n",
-    "# run_name = get_run_name(\"arcface_efficientnet_b0\")\n",
-    "run_name = 'arcface_efficientnet_b0_202512181355'\n",
+    "run_name = get_run_name(\"arcface_efficientnet_b0\")\n",
+    "# run_name = 'arcface_efficientnet_b0_202512181355'\n",
     "print(f\"Run name: {run_name}\")\n",
     "print(f\"Memo: {memo}\")"
    ]
@@ -174,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,12 +260,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ArcFaceモデルパラメータ\n",
-    "# ※ 前処理済み画像は自動検出して使用されます（data/raw/input/train_crops/が存在する場合）\n",
     "params = {\n",
     "    # モデル設定\n",
     "    'model_name': 'efficientnet_b0',  # バックボーン: 'efficientnet_b0', 'resnet50', etc.\n",
@@ -237,7 +283,7 @@
     "    \n",
     "    # EMA設定\n",
     "    'use_ema': True,                   # EMA（Exponential Moving Average）を使用\n",
-    "    'ema_decay': 0.995,                # EMA減衰率\n",
+    "    'ema_decay': 0.998,                # EMA減衰率\n",
     "    \n",
     "    # 推論設定\n",
     "    'threshold': 0.5,                  # 未知選手判定の閾値\n",
@@ -251,16 +297,12 @@
     "    'method': 'group',\n",
     "    'group_col': 'group',\n",
     "    'n_splits': 3,  # 3-fold（実行時間短縮のため）\n",
-    "}\n",
-    "\n",
-    "print(\"\\n=== Parameters ===\")\n",
-    "for key, value in params.items():\n",
-    "    print(f\"  {key}: {value}\")"
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "20",
    "metadata": {},
    "source": [
     "## 7. Runner作成"
@@ -269,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "22",
    "metadata": {},
    "source": [
     "## 8. 3-Fold CV学習（ArcFace訓練）\n",
@@ -305,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,14 +359,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = [np.int64(7), np.int64(3), np.int64(7)]\n",
+    "labels = [np.int64(3), np.int64(7), np.int64(1)]\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n",
+    "f1 = f1_score(labels, preds, average='macro')\n",
+    "print(f\"F1 Score: {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "28",
    "metadata": {},
    "source": [
     "## 9. 3-Fold評価"
@@ -333,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,14 +416,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "31",
    "metadata": {},
    "source": [
     "## 10. テストデータ予測"
@@ -359,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "34",
    "metadata": {},
    "source": [
     "## 11. 提出ファイル作成"
@@ -399,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,14 +482,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "37",
    "metadata": {},
    "source": [
     "## 12. 閾値チューニング実験（高速）\n",
@@ -427,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,14 +572,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "41",
    "metadata": {},
    "source": [
     "## 13. 実験サマリー"
@@ -515,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -552,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "45",
    "metadata": {},
    "source": [
     "## 2. ロガーの設定"
@@ -590,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "47",
    "metadata": {},
    "source": [
     "## 3. データ読み込み"
@@ -618,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "49",
    "metadata": {},
    "source": [
     "## 4. パラメータ設定（ArcFace）"
@@ -657,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +770,7 @@
     "    \n",
     "    # EMA設定\n",
     "    'use_ema': True,                   # EMA（Exponential Moving Average）を使用\n",
-    "    'ema_decay': 0.995,                # EMA減衰率（0.995 ~ 0.9998が一般的）\n",
+    "    'ema_decay': 0.9998,               # EMA減衰率（RedBullのデフォルト値）\n",
     "    \n",
     "    # 推論設定\n",
     "    'threshold': 0.5,                  # 未知選手判定の閾値（最大類似度 < threshold → -1）\n",
@@ -711,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "52",
    "metadata": {},
    "source": [
     "## 5. CV設定"
@@ -720,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "54",
    "metadata": {},
    "source": [
     "## 6. Runnerの作成"
@@ -747,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "56",
    "metadata": {},
    "source": [
     "## 7. CV訓練\n",
@@ -782,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "58",
    "metadata": {},
    "source": [
     "## 8. CV予測\n",
@@ -808,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "60",
    "metadata": {},
    "source": [
     "## 9. 提出ファイル作成"
@@ -829,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54",
+   "id": "62",
    "metadata": {},
    "source": [
     "## 10. 結果の可視化"
@@ -857,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "64",
    "metadata": {},
    "source": [
     "## 11. 実験メモ"
@@ -900,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58",
+   "id": "66",
    "metadata": {},
    "source": [
     "## 12. 閾値チューニング（オプション）\n",
@@ -940,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -993,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1001,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": []
