--- a/notebooks/preprocess_train_crops.ipynb
+++ b/notebooks/preprocess_train_crops.ipynb
@@ -46,7 +46,7 @@
     "sys.path.append('/workspace/atma_22_ca/')\n",
     "\n",
     "from configs.config import *\n",
-    "from src.preprocess import preprocess_train_crops, verify_crops\n",
+    "from src.preprocess import preprocess_train_crops\n",
     "\n",
     "print(f\"✅ モジュールインポート完了\")\n",
     "print(f\"   入力: {DIR_IMAGE}\")\n",
