feat: アンサンブル戦略、モデル分析、閾値最適化、unknown判定評価の実装
- `ensemble_strategy.py`:
  - 複数のアンサンブル戦略（ハードボーティング、ソフトボーティング、重み付きソフトボーティング、順位平均、スタッキング、信頼度ベース）を実装し、評価機能を追加。
  - 各戦略のログ出力機能を追加。

- `model_analysis.py`:
  - モデルの性能分析ツールを実装し、混同行列、クラス別F1スコア、誤分類パターンの可視化機能を追加。

- `threshold_optimizer.py`:
  - 閾値最適化クラスを実装し、cos類似度の閾値を最適化してMacro F1を最大化する機能を追加。
  - 閾値とスコアの関係をプロットする機能を追加。

- `unknown_cv.py`:
  - Unknown判定評価用の交差検証戦略を実装し、未知の選手に対する判定能力を評価する機能を追加。

--- a/notebooks/exp_arcface_sgkfold_cloud.ipynb
+++ b/notebooks/exp_arcface_sgkfold_cloud.ipynb
@@ -215,8 +215,8 @@
    "outputs": [],
    "source": [
     "memo = \"EfficientNet-B0 + ArcFace\"\n",
-    "run_name = get_run_name(\"arcface_efficientnet_b0\")\n",
-    "run_name = 'arcface_efficientnet_b0_202512191520'\n",
+    "run_name = get_run_name(\"arcface_efficientnet_b0_sgkfold\")\n",
+    "# run_name = 'arcface_efficientnet_b0_202512190737'\n",
     "print(f\"Run name: {run_name}\")\n",
     "print(f\"Memo: {memo}\")"
    ]
@@ -295,11 +295,16 @@
     "}\n",
     "\n",
     "# CV設定（Validatorを明示的に作成）\n",
-    "from sklearn.model_selection import GroupKFold\n",
-    "validator = GroupKFold(n_splits=3)\n",
+    "from src.util import Validation\n",
+    "validator_normal = Validation.create_validator(\n",
+    "    method='stratified_group',\n",
+    "    n_splits=3,\n",
+    "    shuffle=True,\n",
+    "    random_state=42\n",
+    ")\n",
     "cv_setting = {\n",
-    "    'validator': validator,\n",
-    "    'group_col': 'group'\n",
+    "    'validator': validator_normal,\n",
+    "    'group_col': 'quarter'\n",
     "}"
    ]
   },
