--- a/notebooks/org/eda.ipynb
+++ b/notebooks/org/eda.ipynb
@@ -1589,7 +1589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "atma_22_ca",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1603,7 +1603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
